# cdds-util

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
example/: blob_bridge.c  blob_subscriber.c  k_pub.c  k_sub.c  kl_pub.c  kl_sub.c
example/serda/: subscriber.c
idl/: builtin.idl
include/cdds/: cdds_builtin.h  cdds_util.h
src/: builtin.c  cdds_blob.c
